# trex

./: README.md  pyproject.toml
src/trex/: __about__.py  cli.py  run.py  trex.yaml  utils.py
tests/: check_gpu.py  check_gpu.sh  test_cmd.py
