[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trex"
dynamic = ["version"]
description = 'Tremendous REmote eXecutor'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jiwan Chung", email = "jiwan.chung.research@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
torch = [
    'nvidia-ml-py3>=7.352.0'
]

[project.urls]
Documentation = "https://github.com/JiwanChung/trex#readme"
Issues = "https://github.com/JiwanChung/trex/issues"
Source = "https://github.com/JiwanChung/trex"

[tool.hatch.version]
path = "src/trex/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trex tests}"

[tool.coverage.run]
source_pkgs = ["trex", "tests"]
branch = true
parallel = true
omit = [
  "src/trex/__about__.py",
]

[tool.coverage.paths]
trex = ["src/trex", "*/trex/src/trex"]
tests = ["tests", "*/trex/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
trex = "trex.cli:trex"
